fix duplicates showing up in i'll go anywhere mode, fix alignment on search button, hide old recommendation results while a new search is running

--- a/app/assets/stylesheets/bootstap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstap_and_overrides.css.scss
@@ -10,3 +10,8 @@ a.btn.btn-primary:visited
 {
 	color: white; /* But primary buttons are white text, blue background, so override */	
 }
+
+.lineButtonUp
+{
+	margin-bottom:10px;	
+}
